--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,8 @@ tqdm = "==4.66.1"
 urllib3 = "==2.0.4"
 yarg = "==0.1.9"
 yarl = "==1.9.2"
-whitenoise=="6.5.0"
+whitenoise = "6.5.0"
+
 
 [dev-packages]
 
